--- a/styles.css
+++ b/styles.css
@@ -230,7 +230,7 @@ body {
     height: 100%;
     display: flex;
     flex-direction: column;
-    background-color: white;
+    background-color: #484848;
 }
 
 .anim {
